# Cpp

./: Builder.cpp  README.md  bilder_empanadas.cpp
Data structures/Graf/: TP U7 Grafos.docx
Data structures/Graf/src/: grafos.cpp
Data structures/List/Clinica_STL/: STLfuntions.hpp  main.cpp
Data structures/List/Clinica_SimpleList/: LinkedList.hpp  PatientNode.hpp  main.cpp
Data structures/Recursion/: TP - Unidad 5 Recursion.docx  parImpar.cpp
Data structures/Sorter/: CocktailSorter.hpp  ISorter.hpp  QuickSorter.hpp  ShellSorter.hpp  SortingMachine.hpp  main.cpp
Data structures/Stack_Queu/: Queue.cpp  Queue_STL.cpp  Stack.cpp  stack_STL.cpp
Data structures/Tree/: arbol1.cpp  arbol2.cpp  arbol3.cpp
Programming patterns/Behavioural/Strategy/: INavigator.cpp  Navigator.cpp  driver.cpp  main.cpp  pedestrian.cpp
Programming patterns/Creational/: Builder.cpp
Programming patterns/Structural/: hotelDecorator.cpp
Ticket/diagramas/rev1/src/: clases_reversionado.mdj
component_open_closed_principle_example-master/: main.cpp
component_open_closed_principle_example-master/include/compset/: ApplicationInterface.h  ComponentFactory.h  ComponentInterface.h  TerminalQuery.h
component_open_closed_principle_example-master/lib/Actions/TestRequestResponse/: TestRequestResponse.cpp
component_open_closed_principle_example-master/lib/Actions/TestRequestResponse/include/compset/: ActionInterface.h  RequestHandlerInterface.h  ResponseHandlerInterface.h
component_open_closed_principle_example-master/lib/Application/: Application.cpp
component_open_closed_principle_example-master/lib/Application/include/compset/: ComponentFactory.h  LibraryLoader.h
component_open_closed_principle_example-master/lib/JsonDocumentGenerator/: JsonDocumentGenerator.cpp
component_open_closed_principle_example-master/lib/JsonDocumentGenerator/test/: test.cpp
component_open_closed_principle_example-master/lib/PortableEnviromentVariable/: PortableEnviromentVariable.c
component_open_closed_principle_example-master/lib/PortableEnviromentVariable/test/: test.cpp
component_open_closed_principle_example-master/lib/RequestHandler/: RequestHandler.cpp
component_open_closed_principle_example-master/lib/RequestHandler/include/compset/: RequestHandlerInterface.h
component_open_closed_principle_example-master/lib/RequestHandler/test/: test.cpp
component_open_closed_principle_example-master/lib/RequestHandler/test/include/compset/: dlfcn.h
component_open_closed_principle_example-master/lib/ResponseHandler/: ResponseHandler.cpp
component_open_closed_principle_example-master/lib/ResponseHandler/include/compset/: dlfcn.h
component_open_closed_principle_example-master/lib/ResponseHandler/test/: test.cpp
component_open_closed_principle_example-master/lib/ResponseHandler/test/include/compset/: ComponentInterface.h
component_open_closed_principle_example-master/lib/XmlDocumentGenerator/: XmlDocumentGenerator.cpp
component_open_closed_principle_example-master/lib/XmlDocumentGenerator/include/compset/: DocumentGeneratorInterface.h
component_open_closed_principle_example-master/lib/XmlDocumentGenerator/test/: test.cpp
component_open_closed_principle_example-master/lib/XmlDocumentGenerator/test/include/compset/: ComponentFactory.h  LibraryLoader.h
component_open_closed_principle_example-master/web/backend/: Readme.txt
component_open_closed_principle_example-master/web/frontend/js/lib/: RequestWrapper.js
cpp-language-manager/test/: LanguageManagerModuleUnitTest.cpp
cpp-language-manager/test/lang/: enUS.lang  esAR.lang  esES.lang  rusRus.lang
parcial/: Segundo  Parcial .docx  cliente.hpp  ficha.hpp  main.cpp  manager.hpp
project_drone/: CMakeLists.txt
project_drone/include/: Aceleration.h  Automatic_Return.h  Brake.h  Camara.h  Descent.h  Drone.h  Elevation.h  Forward.h  ICommands.h  Landing.h  MenuFuns.h  Package.h  Reverse.h  Takeoff.h  TurnLeft.h  TurnRight.h
project_drone/sources/: Aceleration.cpp  Automatic_Return.cpp  Brake.cpp  Camara.cpp  Descent.cpp  Drone.cpp  Elevation.cpp  Forward.cpp  Landing.cpp  MenuFuns.cpp  Package.cpp  Reverse.cpp  Takeoff.cpp  TurnLeft.cpp  TurnRight.cpp  main.cpp
project_drone/testUnit/: TestAceleration.cpp  TestAutoReturn.cpp  TestBrake.cpp  TestCamara.cpp  TestDescent.cpp  TestDrone.cpp  TestElevation.cpp  TestForward.cpp  TestLanding.cpp  TestMenufuns.cpp  TestPackage.cpp  TestReverse.cpp  TestTakeoff.cpp  TestTurnLeft.cpp  TestTurnRight.cpp
smartPointers/: shared_pointer.cpp  shared_pointer_thread.cpp  unique_pointer.cpp  weak_pointer_family.cpp  weak_pointer_family_class.cpp
